[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pybuildinglink"
version = "0.2.0"
description = "Async Python client for the BuildingLink API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Evan Coleman", email = "evandcoleman@gmail.com" },
]
keywords = ["buildinglink", "home-assistant", "smart-home", "api-client"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
]
dependencies = [
    "aiohttp>=3.9.0",
    "lxml>=5.0.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/evandcoleman/pybuildinglink"
Repository = "https://github.com/evandcoleman/pybuildinglink"
Issues = "https://github.com/evandcoleman/pybuildinglink/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pybuildinglink"]
